# avoid-everything-except-exploration

./: .gitignore  .gitmodules  README.md  playground_notebook.ipynb  profiler_recipe.ipynb.ipynb  pyrightconfig.json  requirements.txt
.devcontainer/: Dockerfile  NGC-DL-CONTAINER-LICENSE  README.md  devcontainer.json  docker-compose.yaml
.devcontainer/blender_config/: startup.blend
assets/gp7/: gp7.urdf  gp7_selfspheres.urdf  gp7_selfspheres_abs.urdf  gp7_spheres.urdf  gp7_spheres_abs.urdf  robot_config.yaml
assets/panda/: panda.urdf  panda_selfspheres.urdf  panda_selfspheres_abs.urdf  panda_spheres.urdf  panda_spheres_abs.urdf  robot_config.yaml
avoid_everything/: data_generation.py  data_loader.py  dataset.py  loss.py  mpiformer.py  pretraining.py  rope.py  run_training.py  run_validation_rollouts.py  type_defs.py
avoid_everything/col/: col.py  critic_mpiformer.py  loss.py  mixed_batch_provider.py  replay.py  replay_old.py  run_training.py  run_training_old.py  run_training_original_ae.py  run_validation_rollouts.py
avoid_everything/old/: loss.py  (+2 more)
cleanrl/: ddpg_continuous_action.py
eval_run_results/: avoid_everything.txt  mpiformer.txt  mpiformer_wrong_cache.txt
model_configs/: col.yaml  evaluation.yaml  pretraining.yaml  pretraining_no_logging.yaml  rope.yaml
rviz_config/: avoid_everything.rviz
spherification/: README.md  generate_spheres_wrapper.py  spherification_utils.py
viz_server/: README.md  package.xml  setup.py  shutdown_viz_server.py  viz_client.py
viz_server/scripts/: foxglove.sh  rviz.sh
viz_server/src/viz_server/: server.py
(+33 files in other folders)
